--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   camera: ^0.8.1+3
   image_picker: ^0.8.1+1
   image_picker_for_web: ^2.0.0
+  font_awesome_flutter: ^9.1.0
+  flutter_masked_text2: ^0.9.1
+  animated_card: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
